tokio_pub_sub_macros/tests/fail/missing_subscriber.rs
use tokio_pub_sub_macros::DeriveSubscriber;

#[derive(DeriveSubscriber)]
struct InvalidSubscriber {
    other_field: String,
}

fn main() {}
